# kappa

./: .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  config.lua
cmake/: Coveralls.cmake  CoverallsClear.cmake  CoverallsGenerateGcov.cmake  FindODBC.cmake
src/: CMakeLists.txt  connection.cpp  connection.h  database.cpp  database.h  databasemanager.cpp  databasemysql.cpp  databasemysql.h  databaseodbc.cpp  databaseodbc.h  databasepgsql.cpp  databasepgsql.h
vc14/: config.lua  settings.props  theforgottenserver.vcxproj
vc14/data/XML/: groups.xml
vc14/data/world/: BaiakMap-house.xml  BaiakMap-spawn.xml  BaiakMap.otbm
